--- a/.github/workflows/run-pytest-unittests.yaml
+++ b/.github/workflows/run-pytest-unittests.yaml
@@ -25,16 +25,8 @@ jobs:
         echo "Installing the following packages"
         cat app/requirements.txt
         pip install -r app/requirements.txt
-        echo "Installing httpx, flake8, pytest, asyncio anyio"
-        pip install httpx==0.23.1 flake8==6.0.0 pytest==7.2.0 pytest-asyncio==0.20.2 anyio==3.6.2 google-cloud-bigquery==3.6.0
-    
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
+        echo "Installing httpx, pytest, asyncio anyio"
+        pip install httpx==0.23.1 pytest==7.2.0 pytest-asyncio==0.20.2 anyio==3.6.2
     - name: Test with pytest
       run: |
         python -m pytest -s -v 
