--- a/.github/workflows/deploy_on_staging.yaml
+++ b/.github/workflows/deploy_on_staging.yaml
@@ -1,24 +1,20 @@
-name: Run UnitTest
+name: Deploy on Staging
 
 on:
   push:
-    branches: [main]
+    branches: 
+      - 'main'
 
 jobs:
   deploy-test:
-    runs-on: test
+    runs-on: staging
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-
-      - name: Install dependencies
+      - name: Docker Compose Setup
         run: |
           sudo apt install docker-compose -y && sudo docker-compose build --no-cache
-      - name: Test with pytest
+      - name: Deployment
         run: |
           sudo docker-compose down -v && sudo docker-compose up -d
