--- a/.github/workflows/deploy_on_dev.yaml
+++ b/.github/workflows/deploy_on_dev.yaml
@@ -2,7 +2,7 @@ name: Deploy on Dev (Test)
 
 on:
   push:
-    branches: 
+    branches:
       - '*'
 
 jobs:
@@ -11,6 +11,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Clean Up
+        run: |
+          sudo rm -rf /home/ubuntu/actions-runner/_work/TaxWizard_Backend/TaxWizard_Backend/app/__pycache__/*
+          # You can add more cleanup steps if needed
 
       - name: Docker Compose Setup
         run: |
