--- a/.github/workflows/deploy_on_dev.yaml
+++ b/.github/workflows/deploy_on_dev.yaml
@@ -1,8 +1,9 @@
-name: Run UnitTest
+name: Deploy on Dev (Test)
 
 on:
   push:
-    branches: [main]
+    branches:
+      - '*'
 
 jobs:
   deploy-test:
@@ -11,14 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-
-      - name: Install dependencies
+      - name: Docker Compose Setup
         run: |
           sudo apt install docker-compose -y && sudo docker-compose build --no-cache
-      - name: Test with pytest
+      - name: Deployment
         run: |
           sudo docker-compose down -v && sudo docker-compose up -d
