--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
 env:
   AWS_ECR_REPO: 805071309209.dkr.ecr.us-east-1.amazonaws.com/tax-wizard-ecr
   ECR_REPOSITORY: tax-wizard-ecr # set this to your Amazon ECR repository name
+  ECS_CLUSTER: your-ecs-cluster
+  ECS_SERVICE: your-ecs-service
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -36,9 +39,14 @@ jobs:
         run: |
           docker push ${{ env.AWS_ECR_REPO }}:latest
 
-      # - name: Deploy to ECS (Update this step based on your deployment strategy)
-      #   run: |
-      #     # Add your ECS deployment commands here
-      #     # Example: ecs-cli compose --file docker-compose.yml service up
+      - name: Fetch Latest Task Definition ARN
+        id: fetch-task-def
+        run: |
+          # Fetch the latest revision of the ECS task definition ARN
+          latest_task_def_arn=$(aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE --query 'services[0].taskDefinition' --output text)
+          echo "::set-output name=latest_task_def_arn::${latest_task_def_arn}"
 
-# Add more steps as needed for your specific deployment strategy
+      - name: Update ECS Service
+        run: |
+          # Update ECS service with the latest task definition
+          aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --task-definition ${{ steps.fetch-task-def.outputs.latest_task_def_arn }}
