--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,7 @@ env:
   ECR_REPOSITORY: tax-wizard-ecr # set this to your Amazon ECR repository name
   ECS_CLUSTER: t-w
   ECS_SERVICE: tw
-  ECS_TASK_DEFINITION: tax-w1:1 # set this to the path to your Amazon ECS task definition                                             # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: tw1 # set this to the name of the container in the
+  ECS_TASK_DEFINITION_FAMILY: tax-w1
 
 jobs:
   build-and-deploy:
@@ -29,33 +28,30 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@62f4f872db3836360b72999f4b87f1ff13310f3a
+        uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}
+      - name: Build Docker Image
         run: |
-          # Build a docker container and
-          # push it to ECR so that it can
-          # be deployed to ECS.
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          docker build -t ${{ env.AWS_ECR_REPO }}:latest .
+          docker tag ${{ env.AWS_ECR_REPO }}:latest ${{ steps.login-ecr.outputs.registry }}:latest
+          docker images
+          echo
+      - name: Push Docker Image to ECR
+        run: |
+          docker push ${{ env.AWS_ECR_REPO }}:latest
 
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@c804dfbdd57f713b6c079302a4c01db7017a36fc
-        with:
-          task-definition: ${{ env.ECS_TASK_DEFINITION }}
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ steps.build-image.outputs.image }}
+      - name: Register a new revision of the task definition
+        run: |
+          aws ecs register-task-definition --family $ECS_TASK_DEFINITION_FAMILY --image ${{ env.AWS_ECR_REPO }}:latest
 
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@df9643053eda01f169e64a0e60233aacca83799a
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
+      - name: Fetch Latest Task Definition ARN
+        id: fetch-task-def
+        run: |
+          # Fetch the latest revision of the ECS task definition ARN
+          latest_task_def_arn=$(aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE --query 'services[0].taskDefinition' --output text)
+          echo "::set-output name=latest_task_def_arn::${latest_task_def_arn}"
+
+      - name: Update ECS Service
+        run: |
+          # Update ECS service with the latest task definition
+          aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --task-definition ${{ steps.fetch-task-def.outputs.latest_task_def_arn }}
