--- a/.github/workflows/sonalr.yaml
+++ b/.github/workflows/sonalr.yaml
@@ -7,17 +7,18 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  sonarlint:
+  sonarcloud:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-
-      - uses: SonarSource/sonarcloud-github-action@master
         with:
-          organization: daredevils
-          token: TaxWizard-BUET-Daredevils_TaxWizard_Backend
-
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       - name: Publish SonarLint report
         uses: actions/upload-artifact@v3
         with:
